--- a/MundoServlets/src/main/webapp/index.html
+++ b/MundoServlets/src/main/webapp/index.html
@@ -1,11 +1,20 @@
 <!DOCTYPE html>
 <html>
     <head>
-        <title>Inicio</title>
+        <title>Purebas Java</title>
         <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
     </head>
     <body>
-        <h1>LLamando al Servlet</h1>
+        <h1>Tema 1 de la pagina web: SERVLETS</h1>
         <a href="/MundoServlets/HolaServlets">Servlets Hola Mundo</a>
+        <h1>Tema 2 Formulario SERVLETS</h1>
+        <form name="form1" action="/MundoServlets/Parametros" method="post" >
+            
+            Usuario: <input type="text" name="usuario" />
+            <br/>
+            Password <input type="password" name="password" />
+            <br/>
+            <input type="submit" value="Enviar" />
+        </form>
     </body>
 </html>
