--- a/MundoServlets/src/main/webapp/index.html
+++ b/MundoServlets/src/main/webapp/index.html
@@ -1,20 +1,93 @@
 <!DOCTYPE html>
 <html>
     <head>
-        <title>Purebas Java</title>
+        <title>Pruebas Java</title>
         <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
+        <link rel="stylesheet" type="text/css" href="Recursos/Estilos.css">
+        <script type="text/javascript" src="Recursos/Funciones.js"></script>
     </head>
     <body>
         <h1>Tema 1 de la pagina web: SERVLETS</h1>
         <a href="/MundoServlets/HolaServlets">Servlets Hola Mundo</a>
-        <h1>Tema 2 Formulario SERVLETS</h1>
+
+        <h2>Tema 2 Formulario SERVLETS</h2>
         <form name="form1" action="/MundoServlets/Parametros" method="post" >
-            
             Usuario: <input type="text" name="usuario" />
             <br/>
             Password <input type="password" name="password" />
             <br/>
             <input type="submit" value="Enviar" />
+        </form>
+        <form name="Fomr2" action="/MundoServlets/formularios" method="post" 
+              onsubmit="return validar formu(this)">
+            <input type="hidden" name="oculto" value="valorOculto" />
+            <<table width="200" id="enfasis-columna">
+                <caption>
+                    Formulario Registro de datos 
+                </caption>
+                <tr>
+                    <td class="columna">
+                        Usuario: (*)
+                    </td>
+                    <td>
+                        <input class="default" type="text" name="Usuario"
+                               value="Escribir usuario" onfocus="this.select()"/>
+                    </td>
+                </tr>
+                <tr>
+                    <td class="columna">
+                        Password: (*)
+                    </td>
+                    <td>
+                        <input class="default" type="password" name="Password"
+                               onfocus="this.select()"/>
+                    </td>
+                </tr>
+                <tr>
+                    <td class="columna">
+                        Tegnologias de Internet: (*)
+                    </td>
+                    <td>
+                        Java <input type="checkbox" name="tegnologia" value="java">
+                        &nbsp;&nbsp;&nbsp;
+                        .Net <input type="checkbox" name="tegnologia" value="net">
+                        &nbsp;&nbsp;&nbsp;
+                        Php <input type="checkbox" name="tegnologia" value="php">
+                    </td>
+                </tr>
+                <tr>
+                    <td class="columna">
+                        Genero: (*)
+                    </td>
+                    <td>
+                        Hombre<input type="radio" name="genero" value="H">
+                        &nbsp;&nbsp;&nbsp;
+                        Mujer<input type="radio" name="genero" value="M"> 
+                    </td>
+                </tr>
+                <tr>
+                    <td class="columna">
+                        Ocupacion: (*)
+                    </td>
+                    <td>
+                        <select name="ocupacion" class="default">
+                            <option value="">seleccionar</option>
+                            <option value="1">Profesor</option> 
+                            <option value="2">Ingeniero</option> 
+                            <option value="3">Estudiante</option> 
+                            <option value="4">Jubilado xdxdxdxd</option> 
+                        </select> 
+                    </td>
+                </tr>
+                <tr style="text-aling: center">
+                    <td>
+                        <input type="reset" value="Borrar" class="default">
+                    </td>
+                      <td>
+                        <input type="submit" value="Terminar" class="default">
+                    </td>
+                </tr>
+            </table>
         </form>
     </body>
 </html>
