--- a/MundoServlets/src/main/webapp/index.html
+++ b/MundoServlets/src/main/webapp/index.html
@@ -89,5 +89,8 @@
                 </tr>
             </table>
         </form>
+        <h2>3 CABECEROS</h2>
+        <a href="/ManejoCabeceros/ServletHeaders>Link al SevletHeaders"></a>
+        
     </body>
 </html>
