--- a/MundoServlets/src/main/webapp/index.html
+++ b/MundoServlets/src/main/webapp/index.html
@@ -83,14 +83,18 @@
                     <td>
                         <input type="reset" value="Borrar" class="default">
                     </td>
-                      <td>
+                    <td>
                         <input type="submit" value="Terminar" class="default">
                     </td>
                 </tr>
             </table>
         </form>
         <h2>3 CABECEROS</h2>
-        <a href="/ManejoCabeceros/ServletHeaders>Link al SevletHeaders"></a>
-        
+
+        <h2>Cabeceros con Respuesta</h2>
+        <a href="/MundoServlets/CabecerosRespuesta">link que generara un documento xd
+        <br/>
+        <a href="/MundoServlets/CabecerosRequest">link que identifica la hora xd
+
     </body>
 </html>
