--- a/MundoServlets/src/main/webapp/index.html
+++ b/MundoServlets/src/main/webapp/index.html
@@ -93,8 +93,10 @@
 
         <h2>Cabeceros con Respuesta</h2>
         <a href="/MundoServlets/CabecerosRespuesta">link que generara un documento xd
-        <br/>
-        <a href="/MundoServlets/CabecerosRequest">link que identifica la hora xd
+            <br/>
+            <a href="/MundoServlets/CabecerosRequest">link que identifica la hora xd>
 
-    </body>
-</html>
+                <h1>Cookies</h1>       
+
+                </body>
+                </html>
